--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: November 19, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: November 20, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="dark">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -1376,9 +1376,7 @@ for two years before starting my PhD. I hold a MSc in <a href="https://www.epfl.
   </div>
 
   
-  <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">My current goal is to develop embodied artificial intelligence capable of <strong>human-level motor control</strong>. The focus of my PhD has been on training agents
-which can control realistic models of the human body. When can learn a great deal about how the brain controls our body, when we have an
-artificial system capable of locomotion or dexterous manipulation. More recently, I have also deveoloped <strong>autonomous agents for advertisement bidding</strong>.
+  <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">My current research goal is to develop embodied artificial intelligence capable of <strong>human-level motor control</strong>. The focus of my PhD has been on training agents which can control realistic models of the human body. Wh can learn a great deal about how the brain controls our body, when we have an artificial system capable of locomotion or dexterous manipulation. More recently, I have also developed <strong>autonomous agents for advertisement bidding</strong>.
 Previously, I have worked <strong>traffic optimization</strong> with Reinforcement Learning.</div>
 </div>
 
