--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: November 20, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: November 22, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="dark">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -1162,7 +1162,7 @@ for two years before starting my PhD. I hold a MSc in <a href="https://www.epfl.
     
 
     
-    <a href="uploads/2024-02-08_CV_Alberto_Chiappa.pdf" target="_blank" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-primary-700 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+    <a href="uploads/2024-11-22_CV_Alberto_Chiappa.pdf" target="_blank" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-primary-700 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
       <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
       <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
     </svg> Download CV</a>
@@ -1357,8 +1357,8 @@ for two years before starting my PhD. I hold a MSc in <a href="https://www.epfl.
   </div>
 
   
-  <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">My current research goal is to develop embodied artificial intelligence capable of <strong>human-level motor control</strong>. The focus of my PhD has been on training agents which can control realistic models of the human body. Wh can learn a great deal about how the brain controls our body, when we have an artificial system capable of locomotion or dexterous manipulation. More recently, I have also developed <strong>autonomous agents for advertisement bidding</strong>.
-Previously, I have worked <strong>traffic optimization</strong> with Reinforcement Learning.</div>
+  <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">My current research goal is to develop embodied artificial intelligence capable of <strong>human-level motor control</strong>. The focus of my PhD has been on training agents which can control realistic models of the human body. We can learn a great deal about how the brain controls our body, when we have an artificial system capable of locomotion or dexterous manipulation. More recently, I have developed <strong>autonomous agents for advertisement bidding</strong>.
+Previously, I worked on <strong>traffic optimization</strong> with Reinforcement Learning.</div>
 </div>
 
 
