--- a/public/index.html
+++ b/public/index.html
@@ -1153,7 +1153,7 @@
       <div class="bio-text" >
         <h2 id="about-me">About Me</h2>
 <p>Hi, I am a PhD student in Computational Neuroscience at EPFL, supervised by <a href="https://mathislab.org" target="_blank" rel="noopener">Prof. Alexander Mathis</a>. I am currently interning at
-<a href="https://www.sony.com/ja/SonyInfo/research/" target="_blank" rel="noopener">Sony</a> in Tokyo. I have lead the <a href="https://regis.schindler.com/en/epfl-lab.html" target="_blank" rel="noopener">Schindler EPFL Lab</a>
+<a href="https://www.sony.com/ja/SonyInfo/research/" target="_blank" rel="noopener">Sony</a> in Tokyo. I led the <a href="https://regis.schindler.com/en/epfl-lab.html" target="_blank" rel="noopener">Schindler EPFL Lab</a>
 for two years before starting my PhD. I hold a MSc in <a href="https://www.epfl.ch/education/master/programs/computational-science-and-engineering/" target="_blank" rel="noopener">Computational Science and Engineering (CSE)</a> from <a href="https://www.epfl.ch/en/" target="_blank" rel="noopener">EPFL</a> and a MSc and a BSc from the
 <a href="https://www.polimi.it/en" target="_blank" rel="noopener">Polytechnic Univeristy of Milan (POLIMI)</a> in <a href="https://www.polimi.it/en/education/laurea-magistrale-programmes/programme-detail/mathematical-engineering-1" target="_blank" rel="noopener">Mathematical Engineering</a>.</p>
 
@@ -1357,7 +1357,7 @@ for two years before starting my PhD. I hold a MSc in <a href="https://www.epfl.
   </div>
 
   
-  <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">My current research goal is to develop embodied artificial intelligence capable of <strong>human-level motor control</strong>. The focus of my PhD has been on training agents which can control realistic models of the human body. We can learn a great deal about how the brain controls our body, when we have an artificial system capable of locomotion or dexterous manipulation. More recently, I have developed <strong>autonomous agents for advertisement bidding</strong>.
+  <div class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">My current research goal is to develop embodied artificial intelligence capable of <strong>human-level motor control</strong>. The focus of my PhD has been on training agents which can control realistic models of the human body. We can learn a great deal about how the brain controls our body, when we can study an artificial agent able to locomote and to dexterously manipulate objects. More recently, I have developed <strong>autonomous agents for advertisement bidding</strong>.
 Previously, I worked on <strong>traffic optimization</strong> with Reinforcement Learning.</div>
 </div>
 
