--- a/public/experience/index.html
+++ b/public/experience/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: November 22, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: December 16, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="dark">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -1884,6 +1884,20 @@
         <span class="absolute text-3xl">50%</span>
       </div>
       <span class="text-1xl">French</span>
+    </div>
+    
+    <div class="flex flex-col items-center">
+      <div class="flex items-center justify-center w-28 h-28">
+        <svg class="transform -rotate-90" viewBox="0 0 288 288">
+          <circle cx="145" cy="145" r="120" stroke="currentColor" stroke-width="30" fill="transparent"
+                  class="text-gray-200 dark:text-gray-700" />
+          <circle cx="145" cy="145" r="120" stroke="currentColor" stroke-width="30" fill="transparent"
+                  class="text-primary-600 dark:text-primary-300"
+                  style="stroke-dasharray: calc(2 * 22 / 7 * 120); stroke-dashoffset: calc(((2 * 22 / 7 * 120) * 20/100) - (2 * 22 / 7 * 120))" />
+        </svg>
+        <span class="absolute text-3xl">20%</span>
+      </div>
+      <span class="text-1xl">German</span>
     </div>
     
   </div>
